cmake_minimum_required(VERSION 3.2)

project(client)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

if (MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
else ()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -Wno-unused-variable")
endif ()

find_package(Qt5Core REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Gui REQUIRED)

add_library(${PROJECT_NAME}
    OAIActivesession_Response.cpp
    OAIActivesession_ResponseCompound.cpp
    OAIActivesession_ResponseCompound_Apikey.cpp
    OAIActivesession_ResponseCompound_User.cpp
    OAIActivesession_ResponseCompound_allOf.cpp
    OAIActivesession_getCurrent_v1_Response.cpp
    OAIActivesession_getCurrent_v1_Response_allOf.cpp
    OAIActivesession_getCurrent_v1_Response_mPayload.cpp
    OAIAddress_Request.cpp
    OAIAddress_RequestCompound.cpp
    OAIApikey_Request.cpp
    OAIApikey_RequestCompound.cpp
    OAIApikey_Response.cpp
    OAIApikey_ResponseCompound.cpp
    OAIApikey_createObject_v1_Request.cpp
    OAIApikey_createObject_v1_Response.cpp
    OAIApikey_createObject_v1_Response_allOf.cpp
    OAIApikey_createObject_v1_Response_mPayload.cpp
    OAIApikey_createObject_v2_Request.cpp
    OAIApikey_createObject_v2_Response.cpp
    OAIApikey_createObject_v2_Response_allOf.cpp
    OAIApikey_createObject_v2_Response_mPayload.cpp
    OAIAttempt_Response.cpp
    OAIAttempt_ResponseCompound.cpp
    OAICommon_Audit.cpp
    OAICommon_Auditdetail.cpp
    OAICommon_Response.cpp
    OAICommon_Response_Error.cpp
    OAICommon_Response_Error_sTemporaryFileUrl.cpp
    OAICommon_Response_Error_sTemporaryFileUrl_allOf.cpp
    OAICommon_Response_Filter.cpp
    OAICommon_Response_Redirect_sSecretquestionTextX.cpp
    OAICommon_Response_Warning.cpp
    OAICommon_Response_getList.cpp
    OAICommon_Response_objDebug.cpp
    OAICommon_Response_objDebugPayload.cpp
    OAICommon_Response_objDebugPayload_getList.cpp
    OAICommon_Response_objDebugPayload_getList_allOf.cpp
    OAICommon_Response_objSQLQuery.cpp
    OAICommon_Webhook.cpp
    OAICommon_getAutocompleteDisabled_v1_Response.cpp
    OAICommon_getAutocompleteDisabled_v1_Response_allOf.cpp
    OAICommon_getAutocomplete_v1_Response.cpp
    OAICommon_getAutocomplete_v1_Response_allOf.cpp
    OAICommon_getList_v1_Response_mPayload.cpp
    OAIContact_Request.cpp
    OAIContact_RequestCompound.cpp
    OAIContact_RequestCompound_allOf.cpp
    OAIContactinformations_Request.cpp
    OAIContactinformations_RequestCompound.cpp
    OAIContactinformations_RequestCompound_allOf.cpp
    OAICustom_AutocompleteElementDisabled_Response.cpp
    OAICustom_AutocompleteElementDisabled_Response_allOf.cpp
    OAICustom_AutocompleteElement_Response.cpp
    OAICustom_DropdownElement_Request.cpp
    OAICustom_DropdownElement_RequestCompound.cpp
    OAICustom_DropdownElement_Response.cpp
    OAICustom_DropdownElement_ResponseCompound.cpp
    OAICustom_Ezsignfoldersignerassociationstatus_Response.cpp
    OAICustom_EzsignfoldertransmissionSigner_Response.cpp
    OAICustom_Ezsignfoldertransmission_Response.cpp
    OAICustom_Ezsignsignaturestatus_Response.cpp
    OAICustom_FormDataDocument_Response.cpp
    OAICustom_FormDataEzsignformfield_Response.cpp
    OAICustom_FormDataEzsignformfieldgroup_Response.cpp
    OAICustom_FormDataSigner_Response.cpp
    OAICustom_FormsDataFolder_Response.cpp
    OAICustom_ImportEzsigntemplatepackageRelation_Request.cpp
    OAICustom_Notificationsubsectiongetnotificationtests_Response.cpp
    OAICustom_Notificationsubsectiongetnotificationtests_Response_allOf.cpp
    OAICustom_Notificationtestgetnotificationtests_Response.cpp
    OAICustom_Notificationtestgetnotificationtests_Response_allOf.cpp
    OAICustom_User_Response.cpp
    OAICustom_WordPositionOccurence_Response.cpp
    OAICustom_WordPositionWord_Response.cpp
    OAIEmail_Request.cpp
    OAIEmail_RequestCompound.cpp
    OAIEzsign_suggestSigners_v1_Response.cpp
    OAIEzsign_suggestSigners_v1_Response_allOf.cpp
    OAIEzsign_suggestSigners_v1_Response_mPayload.cpp
    OAIEzsign_suggestTemplates_v1_Response.cpp
    OAIEzsign_suggestTemplates_v1_Response_allOf.cpp
    OAIEzsign_suggestTemplates_v1_Response_mPayload.cpp
    OAIEzsignbulksend_ListElement.cpp
    OAIEzsignbulksend_Request.cpp
    OAIEzsignbulksend_RequestCompound.cpp
    OAIEzsignbulksend_Response.cpp
    OAIEzsignbulksend_ResponseCompound.cpp
    OAIEzsignbulksend_ResponseCompound_allOf.cpp
    OAIEzsignbulksend_createEzsignbulksendtransmission_v1_Request.cpp
    OAIEzsignbulksend_createEzsignbulksendtransmission_v1_Response.cpp
    OAIEzsignbulksend_createEzsignbulksendtransmission_v1_Response_allOf.cpp
    OAIEzsignbulksend_createEzsignbulksendtransmission_v1_Response_mPayload.cpp
    OAIEzsignbulksend_createObject_v1_Request.cpp
    OAIEzsignbulksend_createObject_v1_Response.cpp
    OAIEzsignbulksend_createObject_v1_Response_allOf.cpp
    OAIEzsignbulksend_createObject_v1_Response_mPayload.cpp
    OAIEzsignbulksend_deleteObject_v1_Response.cpp
    OAIEzsignbulksend_editObject_v1_Request.cpp
    OAIEzsignbulksend_editObject_v1_Response.cpp
    OAIEzsignbulksend_getEzsignbulksendtransmissions_v1_Response.cpp
    OAIEzsignbulksend_getEzsignbulksendtransmissions_v1_Response_allOf.cpp
    OAIEzsignbulksend_getEzsignbulksendtransmissions_v1_Response_mPayload.cpp
    OAIEzsignbulksend_getFormsData_v1_Response.cpp
    OAIEzsignbulksend_getFormsData_v1_Response_allOf.cpp
    OAIEzsignbulksend_getFormsData_v1_Response_mPayload.cpp
    OAIEzsignbulksend_getList_v1_Response.cpp
    OAIEzsignbulksend_getList_v1_Response_allOf.cpp
    OAIEzsignbulksend_getList_v1_Response_mPayload.cpp
    OAIEzsignbulksend_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsignbulksend_getObject_v1_Response.cpp
    OAIEzsignbulksend_getObject_v1_Response_allOf.cpp
    OAIEzsignbulksend_getObject_v1_Response_mPayload.cpp
    OAIEzsignbulksend_reorder_v1_Request.cpp
    OAIEzsignbulksend_reorder_v1_Response.cpp
    OAIEzsignbulksenddocumentmapping_Request.cpp
    OAIEzsignbulksenddocumentmapping_RequestCompound.cpp
    OAIEzsignbulksenddocumentmapping_Response.cpp
    OAIEzsignbulksenddocumentmapping_ResponseCompound.cpp
    OAIEzsignbulksenddocumentmapping_ResponseCompound_allOf.cpp
    OAIEzsignbulksenddocumentmapping_createObject_v1_Request.cpp
    OAIEzsignbulksenddocumentmapping_createObject_v1_Response.cpp
    OAIEzsignbulksenddocumentmapping_createObject_v1_Response_allOf.cpp
    OAIEzsignbulksenddocumentmapping_createObject_v1_Response_mPayload.cpp
    OAIEzsignbulksenddocumentmapping_deleteObject_v1_Response.cpp
    OAIEzsignbulksenddocumentmapping_getObject_v1_Response.cpp
    OAIEzsignbulksenddocumentmapping_getObject_v1_Response_allOf.cpp
    OAIEzsignbulksenddocumentmapping_getObject_v1_Response_mPayload.cpp
    OAIEzsignbulksendsignermapping_Request.cpp
    OAIEzsignbulksendsignermapping_RequestCompound.cpp
    OAIEzsignbulksendsignermapping_Response.cpp
    OAIEzsignbulksendsignermapping_ResponseCompound.cpp
    OAIEzsignbulksendsignermapping_createObject_v1_Request.cpp
    OAIEzsignbulksendsignermapping_createObject_v1_Response.cpp
    OAIEzsignbulksendsignermapping_createObject_v1_Response_allOf.cpp
    OAIEzsignbulksendsignermapping_createObject_v1_Response_mPayload.cpp
    OAIEzsignbulksendsignermapping_deleteObject_v1_Response.cpp
    OAIEzsignbulksendsignermapping_getObject_v1_Response.cpp
    OAIEzsignbulksendsignermapping_getObject_v1_Response_allOf.cpp
    OAIEzsignbulksendsignermapping_getObject_v1_Response_mPayload.cpp
    OAIEzsignbulksendtransmission_Response.cpp
    OAIEzsignbulksendtransmission_ResponseCompound.cpp
    OAIEzsignbulksendtransmission_ResponseCompound_allOf.cpp
    OAIEzsignbulksendtransmission_getFormsData_v1_Response.cpp
    OAIEzsignbulksendtransmission_getFormsData_v1_Response_allOf.cpp
    OAIEzsignbulksendtransmission_getFormsData_v1_Response_mPayload.cpp
    OAIEzsignbulksendtransmission_getObject_v1_Response.cpp
    OAIEzsignbulksendtransmission_getObject_v1_Response_allOf.cpp
    OAIEzsignbulksendtransmission_getObject_v1_Response_mPayload.cpp
    OAIEzsigndocument_Request.cpp
    OAIEzsigndocument_RequestCompound.cpp
    OAIEzsigndocument_RequestPatch.cpp
    OAIEzsigndocument_Response.cpp
    OAIEzsigndocument_ResponseCompound.cpp
    OAIEzsigndocument_ResponseCompound_allOf.cpp
    OAIEzsigndocument_applyEzsigntemplate_v1_Request.cpp
    OAIEzsigndocument_applyEzsigntemplate_v1_Response.cpp
    OAIEzsigndocument_applyEzsigntemplate_v2_Request.cpp
    OAIEzsigndocument_applyEzsigntemplate_v2_Response.cpp
    OAIEzsigndocument_createObject_v1_Request.cpp
    OAIEzsigndocument_createObject_v1_Response.cpp
    OAIEzsigndocument_createObject_v1_Response_allOf.cpp
    OAIEzsigndocument_createObject_v1_Response_mPayload.cpp
    OAIEzsigndocument_createObject_v2_Request.cpp
    OAIEzsigndocument_createObject_v2_Response.cpp
    OAIEzsigndocument_createObject_v2_Response_allOf.cpp
    OAIEzsigndocument_createObject_v2_Response_mPayload.cpp
    OAIEzsigndocument_deleteObject_v1_Response.cpp
    OAIEzsigndocument_editEzsignformfieldgroups_v1_Request.cpp
    OAIEzsigndocument_editEzsignformfieldgroups_v1_Response.cpp
    OAIEzsigndocument_editEzsignformfieldgroups_v1_Response_allOf.cpp
    OAIEzsigndocument_editEzsignformfieldgroups_v1_Response_mPayload.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Request.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Response.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Response_allOf.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Response_mPayload.cpp
    OAIEzsigndocument_endPrematurely_v1_Response.cpp
    OAIEzsigndocument_getActionableElements_v1_Response.cpp
    OAIEzsigndocument_getActionableElements_v1_Response_allOf.cpp
    OAIEzsigndocument_getActionableElements_v1_Response_mPayload.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response_allOf.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response_mPayload.cpp
    OAIEzsigndocument_getEzsignformfieldgroups_v1_Response.cpp
    OAIEzsigndocument_getEzsignformfieldgroups_v1_Response_allOf.cpp
    OAIEzsigndocument_getEzsignformfieldgroups_v1_Response_mPayload.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response_allOf.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response_mPayload.cpp
    OAIEzsigndocument_getEzsignsignatures_v1_Response.cpp
    OAIEzsigndocument_getEzsignsignatures_v1_Response_allOf.cpp
    OAIEzsigndocument_getEzsignsignatures_v1_Response_mPayload.cpp
    OAIEzsigndocument_getFormData_v1_Response.cpp
    OAIEzsigndocument_getFormData_v1_Response_allOf.cpp
    OAIEzsigndocument_getFormData_v1_Response_mPayload.cpp
    OAIEzsigndocument_getObject_v1_Response.cpp
    OAIEzsigndocument_getObject_v1_Response_allOf.cpp
    OAIEzsigndocument_getObject_v1_Response_mPayload.cpp
    OAIEzsigndocument_getTemporaryProof_v1_Response.cpp
    OAIEzsigndocument_getTemporaryProof_v1_Response_allOf.cpp
    OAIEzsigndocument_getTemporaryProof_v1_Response_mPayload.cpp
    OAIEzsigndocument_getWordsPositions_v1_Request.cpp
    OAIEzsigndocument_getWordsPositions_v1_Response.cpp
    OAIEzsigndocument_getWordsPositions_v1_Response_allOf.cpp
    OAIEzsigndocument_patchObject_v1_Request.cpp
    OAIEzsigndocument_patchObject_v1_Response.cpp
    OAIEzsigndocument_unsend_v1_Response.cpp
    OAIEzsigndocumentlog_Response.cpp
    OAIEzsigndocumentlog_ResponseCompound.cpp
    OAIEzsignfolder_ListElement.cpp
    OAIEzsignfolder_Request.cpp
    OAIEzsignfolder_RequestCompound.cpp
    OAIEzsignfolder_Response.cpp
    OAIEzsignfolder_ResponseCompound.cpp
    OAIEzsignfolder_archive_v1_Response.cpp
    OAIEzsignfolder_batchDownload_v1_Request.cpp
    OAIEzsignfolder_createObject_v1_Request.cpp
    OAIEzsignfolder_createObject_v1_Response.cpp
    OAIEzsignfolder_createObject_v1_Response_allOf.cpp
    OAIEzsignfolder_createObject_v1_Response_mPayload.cpp
    OAIEzsignfolder_createObject_v2_Request.cpp
    OAIEzsignfolder_createObject_v2_Response.cpp
    OAIEzsignfolder_createObject_v2_Response_allOf.cpp
    OAIEzsignfolder_createObject_v2_Response_mPayload.cpp
    OAIEzsignfolder_deleteObject_v1_Response.cpp
    OAIEzsignfolder_disposeEzsignfolders_v1_Request.cpp
    OAIEzsignfolder_disposeEzsignfolders_v1_Response.cpp
    OAIEzsignfolder_dispose_v1_Response.cpp
    OAIEzsignfolder_editObject_v1_Request.cpp
    OAIEzsignfolder_editObject_v1_Response.cpp
    OAIEzsignfolder_getActionableElements_v1_Response.cpp
    OAIEzsignfolder_getActionableElements_v1_Response_allOf.cpp
    OAIEzsignfolder_getActionableElements_v1_Response_mPayload.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response_allOf.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response_mPayload.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response_allOf.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response_mPayload.cpp
    OAIEzsignfolder_getFormsData_v1_Response.cpp
    OAIEzsignfolder_getFormsData_v1_Response_allOf.cpp
    OAIEzsignfolder_getFormsData_v1_Response_mPayload.cpp
    OAIEzsignfolder_getList_v1_Response.cpp
    OAIEzsignfolder_getList_v1_Response_allOf.cpp
    OAIEzsignfolder_getList_v1_Response_mPayload.cpp
    OAIEzsignfolder_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsignfolder_getObject_v1_Response.cpp
    OAIEzsignfolder_getObject_v1_Response_allOf.cpp
    OAIEzsignfolder_getObject_v1_Response_mPayload.cpp
    OAIEzsignfolder_importEzsigntemplatepackage_v1_Request.cpp
    OAIEzsignfolder_importEzsigntemplatepackage_v1_Response.cpp
    OAIEzsignfolder_importEzsigntemplatepackage_v1_Response_allOf.cpp
    OAIEzsignfolder_importEzsigntemplatepackage_v1_Response_mPayload.cpp
    OAIEzsignfolder_reorder_v1_Request.cpp
    OAIEzsignfolder_reorder_v1_Response.cpp
    OAIEzsignfolder_send_v1_Request.cpp
    OAIEzsignfolder_send_v1_Response.cpp
    OAIEzsignfolder_unsend_v1_Response.cpp
    OAIEzsignfoldersignerassociation_Request.cpp
    OAIEzsignfoldersignerassociation_RequestCompound.cpp
    OAIEzsignfoldersignerassociation_RequestCompound_allOf.cpp
    OAIEzsignfoldersignerassociation_Response.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound_User.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound_allOf.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Request.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response_mPayload.cpp
    OAIEzsignfoldersignerassociation_createObject_v2_Request.cpp
    OAIEzsignfoldersignerassociation_createObject_v2_Response.cpp
    OAIEzsignfoldersignerassociation_createObject_v2_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_createObject_v2_Response_mPayload.cpp
    OAIEzsignfoldersignerassociation_deleteObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_editObject_v1_Request.cpp
    OAIEzsignfoldersignerassociation_editObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response_mPayload.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response_mPayload.cpp
    OAIEzsignfoldertype_ListElement.cpp
    OAIEzsignfoldertype_getList_v1_Response.cpp
    OAIEzsignfoldertype_getList_v1_Response_allOf.cpp
    OAIEzsignfoldertype_getList_v1_Response_mPayload.cpp
    OAIEzsignfoldertype_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsignformfield_Request.cpp
    OAIEzsignformfield_RequestCompound.cpp
    OAIEzsignformfield_Response.cpp
    OAIEzsignformfield_ResponseCompound.cpp
    OAIEzsignformfieldgroup_Request.cpp
    OAIEzsignformfieldgroup_RequestCompound.cpp
    OAIEzsignformfieldgroup_RequestCompound_allOf.cpp
    OAIEzsignformfieldgroup_Response.cpp
    OAIEzsignformfieldgroup_ResponseCompound.cpp
    OAIEzsignformfieldgroup_ResponseCompound_allOf.cpp
    OAIEzsignformfieldgroup_createObject_v1_Request.cpp
    OAIEzsignformfieldgroup_createObject_v1_Response.cpp
    OAIEzsignformfieldgroup_createObject_v1_Response_allOf.cpp
    OAIEzsignformfieldgroup_createObject_v1_Response_mPayload.cpp
    OAIEzsignformfieldgroup_deleteObject_v1_Response.cpp
    OAIEzsignformfieldgroup_editObject_v1_Request.cpp
    OAIEzsignformfieldgroup_editObject_v1_Response.cpp
    OAIEzsignformfieldgroup_getObject_v1_Response.cpp
    OAIEzsignformfieldgroup_getObject_v1_Response_allOf.cpp
    OAIEzsignformfieldgroup_getObject_v1_Response_mPayload.cpp
    OAIEzsignformfieldgroupsigner_Request.cpp
    OAIEzsignformfieldgroupsigner_RequestCompound.cpp
    OAIEzsignformfieldgroupsigner_Response.cpp
    OAIEzsignformfieldgroupsigner_ResponseCompound.cpp
    OAIEzsignpage_Response.cpp
    OAIEzsignpage_ResponseCompound.cpp
    OAIEzsignsignature_Request.cpp
    OAIEzsignsignature_RequestCompound.cpp
    OAIEzsignsignature_RequestCompound_allOf.cpp
    OAIEzsignsignature_Response.cpp
    OAIEzsignsignature_ResponseCompound.cpp
    OAIEzsignsignature_ResponseCompound_allOf.cpp
    OAIEzsignsignature_createObject_v1_Request.cpp
    OAIEzsignsignature_createObject_v1_Response.cpp
    OAIEzsignsignature_createObject_v1_Response_allOf.cpp
    OAIEzsignsignature_createObject_v1_Response_mPayload.cpp
    OAIEzsignsignature_createObject_v2_Request.cpp
    OAIEzsignsignature_createObject_v2_Response.cpp
    OAIEzsignsignature_createObject_v2_Response_allOf.cpp
    OAIEzsignsignature_createObject_v2_Response_mPayload.cpp
    OAIEzsignsignature_deleteObject_v1_Response.cpp
    OAIEzsignsignature_editObject_v1_Request.cpp
    OAIEzsignsignature_editObject_v1_Response.cpp
    OAIEzsignsignature_getObject_v1_Response.cpp
    OAIEzsignsignature_getObject_v1_Response_allOf.cpp
    OAIEzsignsignature_getObject_v1_Response_mPayload.cpp
    OAIEzsignsignature_sign_v1_Request.cpp
    OAIEzsignsignature_sign_v1_Response.cpp
    OAIEzsignsignature_sign_v1_Response_allOf.cpp
    OAIEzsignsignaturecustomdate_Request.cpp
    OAIEzsignsignaturecustomdate_RequestCompound.cpp
    OAIEzsignsignaturecustomdate_Response.cpp
    OAIEzsignsignaturecustomdate_ResponseCompound.cpp
    OAIEzsignsigner_Request.cpp
    OAIEzsignsigner_RequestCompound.cpp
    OAIEzsignsigner_RequestCompound_Contact.cpp
    OAIEzsignsigner_RequestCompound_allOf.cpp
    OAIEzsignsigner_Response.cpp
    OAIEzsignsigner_ResponseCompound.cpp
    OAIEzsignsigner_ResponseCompound_Contact.cpp
    OAIEzsignsigner_ResponseCompound_allOf.cpp
    OAIEzsigntemplate_ListElement.cpp
    OAIEzsigntemplate_Request.cpp
    OAIEzsigntemplate_RequestCompound.cpp
    OAIEzsigntemplate_Response.cpp
    OAIEzsigntemplate_ResponseCompound.cpp
    OAIEzsigntemplate_ResponseCompound_allOf.cpp
    OAIEzsigntemplate_createObject_v1_Request.cpp
    OAIEzsigntemplate_createObject_v1_Response.cpp
    OAIEzsigntemplate_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplate_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplate_deleteObject_v1_Response.cpp
    OAIEzsigntemplate_editObject_v1_Request.cpp
    OAIEzsigntemplate_editObject_v1_Response.cpp
    OAIEzsigntemplate_getList_v1_Response.cpp
    OAIEzsigntemplate_getList_v1_Response_allOf.cpp
    OAIEzsigntemplate_getList_v1_Response_mPayload.cpp
    OAIEzsigntemplate_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsigntemplate_getObject_v1_Response.cpp
    OAIEzsigntemplate_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplate_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_Request.cpp
    OAIEzsigntemplatedocument_RequestCompound.cpp
    OAIEzsigntemplatedocument_RequestPatch.cpp
    OAIEzsigntemplatedocument_Response.cpp
    OAIEzsigntemplatedocument_ResponseCompound.cpp
    OAIEzsigntemplatedocument_createObject_v1_Request.cpp
    OAIEzsigntemplatedocument_createObject_v1_Response.cpp
    OAIEzsigntemplatedocument_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_editEzsigntemplateformfieldgroups_v1_Request.cpp
    OAIEzsigntemplatedocument_editEzsigntemplateformfieldgroups_v1_Response.cpp
    OAIEzsigntemplatedocument_editEzsigntemplateformfieldgroups_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_editEzsigntemplateformfieldgroups_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_editEzsigntemplatesignatures_v1_Request.cpp
    OAIEzsigntemplatedocument_editEzsigntemplatesignatures_v1_Response.cpp
    OAIEzsigntemplatedocument_editEzsigntemplatesignatures_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_editEzsigntemplatesignatures_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_editObject_v1_Request.cpp
    OAIEzsigntemplatedocument_editObject_v1_Response.cpp
    OAIEzsigntemplatedocument_editObject_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatedocumentpages_v1_Response.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatedocumentpages_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatedocumentpages_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_getEzsigntemplateformfieldgroups_v1_Response.cpp
    OAIEzsigntemplatedocument_getEzsigntemplateformfieldgroups_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_getEzsigntemplateformfieldgroups_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatesignatures_v1_Response.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatesignatures_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_getEzsigntemplatesignatures_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_getObject_v1_Response.cpp
    OAIEzsigntemplatedocument_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatedocument_getWordsPositions_v1_Request.cpp
    OAIEzsigntemplatedocument_getWordsPositions_v1_Response.cpp
    OAIEzsigntemplatedocument_getWordsPositions_v1_Response_allOf.cpp
    OAIEzsigntemplatedocument_patchObject_v1_Request.cpp
    OAIEzsigntemplatedocument_patchObject_v1_Response.cpp
    OAIEzsigntemplatedocumentpage_Response.cpp
    OAIEzsigntemplatedocumentpage_ResponseCompound.cpp
    OAIEzsigntemplateformfield_Request.cpp
    OAIEzsigntemplateformfield_RequestCompound.cpp
    OAIEzsigntemplateformfield_Response.cpp
    OAIEzsigntemplateformfield_ResponseCompound.cpp
    OAIEzsigntemplateformfieldgroup_Request.cpp
    OAIEzsigntemplateformfieldgroup_RequestCompound.cpp
    OAIEzsigntemplateformfieldgroup_RequestCompound_allOf.cpp
    OAIEzsigntemplateformfieldgroup_Response.cpp
    OAIEzsigntemplateformfieldgroup_ResponseCompound.cpp
    OAIEzsigntemplateformfieldgroup_ResponseCompound_allOf.cpp
    OAIEzsigntemplateformfieldgroup_createObject_v1_Request.cpp
    OAIEzsigntemplateformfieldgroup_createObject_v1_Response.cpp
    OAIEzsigntemplateformfieldgroup_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplateformfieldgroup_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplateformfieldgroup_deleteObject_v1_Response.cpp
    OAIEzsigntemplateformfieldgroup_editObject_v1_Request.cpp
    OAIEzsigntemplateformfieldgroup_editObject_v1_Response.cpp
    OAIEzsigntemplateformfieldgroup_getObject_v1_Response.cpp
    OAIEzsigntemplateformfieldgroup_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplateformfieldgroup_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplateformfieldgroupsigner_Request.cpp
    OAIEzsigntemplateformfieldgroupsigner_RequestCompound.cpp
    OAIEzsigntemplateformfieldgroupsigner_Response.cpp
    OAIEzsigntemplateformfieldgroupsigner_ResponseCompound.cpp
    OAIEzsigntemplatepackage_ListElement.cpp
    OAIEzsigntemplatepackage_Request.cpp
    OAIEzsigntemplatepackage_RequestCompound.cpp
    OAIEzsigntemplatepackage_Response.cpp
    OAIEzsigntemplatepackage_ResponseCompound.cpp
    OAIEzsigntemplatepackage_ResponseCompound_allOf.cpp
    OAIEzsigntemplatepackage_createObject_v1_Request.cpp
    OAIEzsigntemplatepackage_createObject_v1_Response.cpp
    OAIEzsigntemplatepackage_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackage_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackage_deleteObject_v1_Response.cpp
    OAIEzsigntemplatepackage_editEzsigntemplatepackagesigners_v1_Request.cpp
    OAIEzsigntemplatepackage_editEzsigntemplatepackagesigners_v1_Response.cpp
    OAIEzsigntemplatepackage_editEzsigntemplatepackagesigners_v1_Response_allOf.cpp
    OAIEzsigntemplatepackage_editEzsigntemplatepackagesigners_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackage_editObject_v1_Request.cpp
    OAIEzsigntemplatepackage_editObject_v1_Response.cpp
    OAIEzsigntemplatepackage_getList_v1_Response.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_allOf.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsigntemplatepackage_getObject_v1_Response.cpp
    OAIEzsigntemplatepackage_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackage_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagemembership_Request.cpp
    OAIEzsigntemplatepackagemembership_RequestCompound.cpp
    OAIEzsigntemplatepackagemembership_Response.cpp
    OAIEzsigntemplatepackagemembership_ResponseCompound.cpp
    OAIEzsigntemplatepackagemembership_ResponseCompound_allOf.cpp
    OAIEzsigntemplatepackagemembership_createObject_v1_Request.cpp
    OAIEzsigntemplatepackagemembership_createObject_v1_Response.cpp
    OAIEzsigntemplatepackagemembership_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagemembership_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagemembership_deleteObject_v1_Response.cpp
    OAIEzsigntemplatepackagemembership_getObject_v1_Response.cpp
    OAIEzsigntemplatepackagemembership_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagemembership_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesigner_Request.cpp
    OAIEzsigntemplatepackagesigner_RequestCompound.cpp
    OAIEzsigntemplatepackagesigner_Response.cpp
    OAIEzsigntemplatepackagesigner_ResponseCompound.cpp
    OAIEzsigntemplatepackagesigner_createObject_v1_Request.cpp
    OAIEzsigntemplatepackagesigner_createObject_v1_Response.cpp
    OAIEzsigntemplatepackagesigner_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesigner_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesigner_deleteObject_v1_Response.cpp
    OAIEzsigntemplatepackagesigner_deleteObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesigner_deleteObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesigner_editObject_v1_Request.cpp
    OAIEzsigntemplatepackagesigner_editObject_v1_Response.cpp
    OAIEzsigntemplatepackagesigner_getObject_v1_Response.cpp
    OAIEzsigntemplatepackagesigner_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesigner_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesignermembership_Request.cpp
    OAIEzsigntemplatepackagesignermembership_RequestCompound.cpp
    OAIEzsigntemplatepackagesignermembership_Response.cpp
    OAIEzsigntemplatepackagesignermembership_ResponseCompound.cpp
    OAIEzsigntemplatepackagesignermembership_createObject_v1_Request.cpp
    OAIEzsigntemplatepackagesignermembership_createObject_v1_Response.cpp
    OAIEzsigntemplatepackagesignermembership_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesignermembership_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesignermembership_deleteObject_v1_Response.cpp
    OAIEzsigntemplatepackagesignermembership_deleteObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesignermembership_deleteObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackagesignermembership_getObject_v1_Response.cpp
    OAIEzsigntemplatepackagesignermembership_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatepackagesignermembership_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatesignature_Request.cpp
    OAIEzsigntemplatesignature_RequestCompound.cpp
    OAIEzsigntemplatesignature_RequestCompound_allOf.cpp
    OAIEzsigntemplatesignature_Response.cpp
    OAIEzsigntemplatesignature_ResponseCompound.cpp
    OAIEzsigntemplatesignature_ResponseCompound_allOf.cpp
    OAIEzsigntemplatesignature_createObject_v1_Request.cpp
    OAIEzsigntemplatesignature_createObject_v1_Response.cpp
    OAIEzsigntemplatesignature_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatesignature_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatesignature_deleteObject_v1_Response.cpp
    OAIEzsigntemplatesignature_editObject_v1_Request.cpp
    OAIEzsigntemplatesignature_editObject_v1_Response.cpp
    OAIEzsigntemplatesignature_getObject_v1_Response.cpp
    OAIEzsigntemplatesignature_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatesignature_getObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatesignaturecustomdate_Request.cpp
    OAIEzsigntemplatesignaturecustomdate_RequestCompound.cpp
    OAIEzsigntemplatesignaturecustomdate_Response.cpp
    OAIEzsigntemplatesignaturecustomdate_ResponseCompound.cpp
    OAIEzsigntemplatesigner_Request.cpp
    OAIEzsigntemplatesigner_RequestCompound.cpp
    OAIEzsigntemplatesigner_Response.cpp
    OAIEzsigntemplatesigner_ResponseCompound.cpp
    OAIEzsigntemplatesigner_createObject_v1_Request.cpp
    OAIEzsigntemplatesigner_createObject_v1_Response.cpp
    OAIEzsigntemplatesigner_createObject_v1_Response_allOf.cpp
    OAIEzsigntemplatesigner_createObject_v1_Response_mPayload.cpp
    OAIEzsigntemplatesigner_deleteObject_v1_Response.cpp
    OAIEzsigntemplatesigner_editObject_v1_Request.cpp
    OAIEzsigntemplatesigner_editObject_v1_Response.cpp
    OAIEzsigntemplatesigner_getObject_v1_Response.cpp
    OAIEzsigntemplatesigner_getObject_v1_Response_allOf.cpp
    OAIEzsigntemplatesigner_getObject_v1_Response_mPayload.cpp
    OAIField_eActivesessionUsertype.cpp
    OAIField_eActivesessionWeekdaystart.cpp
    OAIField_eEzsigndocumentStep.cpp
    OAIField_eEzsigndocumentlogType.cpp
    OAIField_eEzsignfolderSendreminderfrequency.cpp
    OAIField_eEzsignfolderStep.cpp
    OAIField_eEzsignfoldertypePrivacylevel.cpp
    OAIField_eEzsignformfieldgroupSignerrequirement.cpp
    OAIField_eEzsignformfieldgroupTooltipposition.cpp
    OAIField_eEzsignformfieldgroupType.cpp
    OAIField_eEzsignsignatureFont.cpp
    OAIField_eEzsignsignatureTooltipposition.cpp
    OAIField_eEzsignsignatureType.cpp
    OAIField_eEzsigntemplateformfieldgroupSignerrequirement.cpp
    OAIField_eEzsigntemplateformfieldgroupTooltipposition.cpp
    OAIField_eEzsigntemplateformfieldgroupType.cpp
    OAIField_eEzsigntemplatesignatureFont.cpp
    OAIField_eEzsigntemplatesignatureTooltipposition.cpp
    OAIField_eEzsigntemplatesignatureType.cpp
    OAIField_eNotificationpreferenceStatus.cpp
    OAIField_ePhoneType.cpp
    OAIField_eUserEzsignsendreminderfrequency.cpp
    OAIField_eUserType.cpp
    OAIFranchisereferalincome_Request.cpp
    OAIFranchisereferalincome_RequestCompound.cpp
    OAIFranchisereferalincome_RequestCompound_allOf.cpp
    OAIFranchisereferalincome_createObject_v1_Request.cpp
    OAIFranchisereferalincome_createObject_v1_Response.cpp
    OAIFranchisereferalincome_createObject_v1_Response_allOf.cpp
    OAIFranchisereferalincome_createObject_v1_Response_mPayload.cpp
    OAIFranchisereferalincome_createObject_v2_Request.cpp
    OAIFranchisereferalincome_createObject_v2_Response.cpp
    OAIFranchisereferalincome_createObject_v2_Response_allOf.cpp
    OAIFranchisereferalincome_createObject_v2_Response_mPayload.cpp
    OAIGlobal_customer_getEndpoint_v1_Response.cpp
    OAIHeader_Accept_Language.cpp
    OAIMultilingual_ApikeyDescription.cpp
    OAINotificationsection_getNotificationtests_v1_Response.cpp
    OAINotificationsection_getNotificationtests_v1_Response_allOf.cpp
    OAINotificationsection_getNotificationtests_v1_Response_mPayload.cpp
    OAINotificationsubsection_Response.cpp
    OAINotificationtest_Response.cpp
    OAINotificationtest_getElements_v1_Response.cpp
    OAINotificationtest_getElements_v1_Response_allOf.cpp
    OAINotificationtest_getElements_v1_Response_mPayload.cpp
    OAIPhone_Request.cpp
    OAIPhone_RequestCompound.cpp
    OAIUser_Response.cpp
    OAIUser_ResponseCompound.cpp
    OAIUser_createEzsignuser_v1_Request.cpp
    OAIUser_createEzsignuser_v1_Response.cpp
    OAIUser_createEzsignuser_v1_Response_allOf.cpp
    OAIUser_createEzsignuser_v1_Response_mPayload.cpp
    OAIWebhook_Ezsign_DocumentCompleted.cpp
    OAIWebhook_Ezsign_DocumentCompleted_allOf.cpp
    OAIWebhook_Ezsign_FolderCompleted.cpp
    OAIWebhook_Ezsign_FolderCompleted_allOf.cpp
    OAIWebhook_Response.cpp
    OAIWebhook_User_UserCreated.cpp
    OAIWebhook_User_UserCreated_allOf.cpp
    OAIWebsite_Request.cpp
    OAIWebsite_RequestCompound.cpp
    OAIGlobalCustomerApi.cpp
    OAIModuleEzsignApi.cpp
    OAIModuleUserApi.cpp
    OAIObjectActivesessionApi.cpp
    OAIObjectApikeyApi.cpp
    OAIObjectBillingentityinternalApi.cpp
    OAIObjectBrandingApi.cpp
    OAIObjectEzsignbulksendApi.cpp
    OAIObjectEzsignbulksenddocumentmappingApi.cpp
    OAIObjectEzsignbulksendsignermappingApi.cpp
    OAIObjectEzsignbulksendtransmissionApi.cpp
    OAIObjectEzsigndocumentApi.cpp
    OAIObjectEzsignfolderApi.cpp
    OAIObjectEzsignfoldersignerassociationApi.cpp
    OAIObjectEzsignfoldertypeApi.cpp
    OAIObjectEzsignformfieldgroupApi.cpp
    OAIObjectEzsignsignatureApi.cpp
    OAIObjectEzsigntemplateApi.cpp
    OAIObjectEzsigntemplatedocumentApi.cpp
    OAIObjectEzsigntemplateformfieldgroupApi.cpp
    OAIObjectEzsigntemplatepackageApi.cpp
    OAIObjectEzsigntemplatepackagemembershipApi.cpp
    OAIObjectEzsigntemplatepackagesignerApi.cpp
    OAIObjectEzsigntemplatepackagesignermembershipApi.cpp
    OAIObjectEzsigntemplatesignatureApi.cpp
    OAIObjectEzsigntemplatesignerApi.cpp
    OAIObjectEzsigntsarequirementApi.cpp
    OAIObjectFranchisebrokerApi.cpp
    OAIObjectFranchiseofficeApi.cpp
    OAIObjectFranchisereferalincomeApi.cpp
    OAIObjectNotificationsectionApi.cpp
    OAIObjectNotificationtestApi.cpp
    OAIObjectPeriodApi.cpp
    OAIObjectSecretquestionApi.cpp
    OAIObjectTaxassignmentApi.cpp
    OAIObjectTimezoneApi.cpp
    OAIObjectUserApi.cpp
    OAIObjectUsergroupApi.cpp
    OAIHelpers.cpp
    OAIHttpRequest.cpp
    OAIHttpFileElement.cpp
    OAIOauth.cpp
)
target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core Qt5::Network Qt5::Gui)
if(NOT APPLE)
  find_package(OpenSSL REQUIRED)
  target_link_libraries(${PROJECT_NAME} PRIVATE ssl crypto)
endif()

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
